link on lisatud

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <h1>Irina koduleht</h1>
 <div>Täna on 11.jaanuar 2024</div>
 <strong>Väga tähtis tekst</strong>
+<a href="https://moodle.edu.ee/mod/forum/view.php?id=2279300">
+    Moodle link
+</a>
 
 </body>
 </html>
